# DocuVerse

./: .gitignore  DEVELOPMENT.md  FRONTEND_MAKEFILE.md  FRONTEND_TESTING.md  MYPY_SETUP.md  Makefile  README.md  SETUP.md  TESTING.md  docker-compose.yml  env.example  start-flower.sh  start.sh
backend/: .dockerignore  Dockerfile  Makefile  README.md  env_template.txt  main.py  mypy.ini  pyproject.toml  pytest.ini
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/routes/: documents.py  enhanced_query.py  query.py  upload.py  worker.py
backend/app/core/: __init__.py  celery_client.py  config.py  database.py  websocket_manager.py
backend/app/models/: __init__.py  document.py
backend/app/services/: __init__.py  conversation_service.py  document_service.py  embedding_service.py  enhanced_vector_store.py  qa_graph_service.py  vector_store.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: __init__.py
backend/tests/integration/: __init__.py
backend/tests/integration/app/: __init__.py
backend/tests/integration/app/api/: __init__.py  test_document_deletion_integration.py
backend/tests/unit/: __init__.py
backend/tests/unit/app/api/: __init__.py
backend/tests/unit/app/api/routes/: __init__.py  test_upload.py
backend/tests/unit/app/core/: test_config.py
backend/tests/unit/app/services/: test_document_service.py
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  Makefile  README.md  babel.config.js  jest.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.js  setupTests.js
frontend/src/components/: Navbar.js  SystemStatus.js
frontend/src/pages/: Dashboard.js  Documents.js  Query.js  Upload.js
frontend/tests/e2e/: setupTests.js
frontend/tests/integration/: setupTests.js
frontend/tests/unit/: setupTests.js
frontend/tests/unit/components/: Navbar.test.js
frontend/tests/unit/pages/: Query.test.js  Upload.test.js
frontend/tests/unit/utils/: mocks.js  test-utils.js
worker/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  flower_config.py  mypy.ini  pyproject.toml  pytest.ini
worker/app/: __init__.py  celery_app.py  config.py  logging_config.py  tasks.py
worker/app/core/: progress_manager.py
worker/app/core/lib/llamaindex/: __init__.py  hierarchical_node_parser.py  pinecone_vector_store.py
worker/app/services/: document_deletion_service.py  document_ingestor.py  document_processor_service.py  llmsherpa_parser.py  retrieval_service.py
worker/tests/: __init__.py  conftest.py
worker/tests/e2e/: __init__.py
worker/tests/integration/: __init__.py
worker/tests/unit/: __init__.py
worker/tests/unit/app/: __init__.py  test_tasks.py
worker/tests/unit/app/services/: test_document_deletion_service.py  test_document_processor_service.py
